[package]
name = "rust_git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
bytes = { version = "1.5.0", features = [] }
sha1 = "0.10.6"
walkdir = "2.4.0"
glob = "0.3.1"
tempdir = "0.3.7"